Fix Player Name overlap

--- a/css/main.css
+++ b/css/main.css
@@ -230,6 +230,7 @@ main{
 
 .player-names-display{
     display: flex;
+    flex-direction: row;
 }
 
 .player-names-display > div{
